# vSMTP

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  all-in-one.Dockerfile  deny.toml  rabbitmq.Dockerfile  rustfmt.toml
.config/: spell.dic
crates/antivirus/: Cargo.toml  README.md
crates/antivirus/src/: lib.rs
crates/auth/: Cargo.toml
crates/auth/src/: certificate.rs  iprev.rs  lib.rs  private_key.rs
crates/auth/src/dkim/: algorithm.rs  canonicalization.rs  mail.rs  mod.rs  private_key.rs  public_key.rs  record.rs  result.rs  sign.rs  signature.rs  verify.rs
crates/auth/src/dkim/tests/: canonicalization.rs  hash_header.rs  sign_verify.rs
crates/auth/src/dkim/tests/parse/: public_key.rs  signature_header.rs
crates/auth/src/dmarc/: mod.rs  record.rs  result.rs
crates/auth/src/spf/: mod.rs
crates/common/: Cargo.toml
crates/common/src/: api.rs  broker.rs  ctx.rs  ctx_delivery.rs  ctx_received.rs  delivery_route.rs  dkim.rs  dmarc.rs  dns_resolver.rs  extensions.rs  faker.rs  iprev.rs  lib.rs  libc.rs  response.rs  serde_helper.rs  spf.rs  stateful_ctx_received.rs  tls.rs  transfer_error.rs
crates/common/src/delivery_attempt/: local_information.rs  mod.rs  remote_information.rs
crates/common/src/tls/: cert_resolver.rs  cipher_suite.rs  error.rs  logger.rs  protocol_version.rs  secret.rs
crates/config/: Cargo.toml
crates/config/src/: broker.rs  error.rs  lib.rs  logs.rs  queues.rs
crates/delivery/: Cargo.toml
crates/delivery/src/: config.rs  frequency.rs  lib.rs  send.rs  tls.rs
crates/delivery/src/smtp/: exchange.rs  handler.rs  send.rs
crates/log-dispatcher/: Cargo.toml
crates/log-dispatcher/src/: config.rs  formatter.rs  lib.rs  logger.rs  main.rs
crates/mail-parser/: Cargo.toml  README.md
crates/mail-parser/src/: errors.rs  lib.rs  mail.rs  mime.rs  parsing.rs
crates/mail-parser/src/mail/: body.rs  headers.rs
crates/mail-parser/src/mime/: headers.rs  parts.rs
crates/mail-parser/src/parsing/: bytes.rs
crates/mail-parser/tests/: produce.rs
crates/mail-parser/tests/mail/: allen-p__discussion_threads__1.eml  dorland-c__sent_items__66.eml  simple.eml
crates/mail-parser/tests/mime_parser/: allen_p__discussion_threads__1.rs  methods.rs  mime1.rs
crates/mail-parser/tests/mime_parser/rfc2049/: a.rs  mod.rs
crates/mail-parser/tests/mime_parser/rfc5322/: a_1_1.rs  a_1_2.rs  a_1_3.rs  a_2.rs  a_3.rs  a_4.rs  a_5.rs  mod.rs
crates/plugins/vsmtp-plugin-clamav/: Cargo.toml  build.rs
crates/plugins/vsmtp-plugin-clamav/src/: api.rs  lib.rs
crates/plugins/vsmtp-plugin-csv/: Cargo.toml  build.rs
crates/plugins/vsmtp-plugin-csv/src/: api.rs  lib.rs
crates/plugins/vsmtp-plugin-csv/tests/: dummy_file.csv
crates/plugins/vsmtp-plugin-dnsxl/: Cargo.toml  build.rs
crates/plugins/vsmtp-plugin-dnsxl/src/: api.rs  lib.rs  tests.rs
crates/plugins/vsmtp-plugin-ldap/: Cargo.toml  build.rs
crates/plugins/vsmtp-plugin-ldap/docker/: docker-compose.yml
crates/plugins/vsmtp-plugin-ldap/src/: api.rs  lib.rs
crates/plugins/vsmtp-plugin-memcached/: Cargo.toml  build.rs
crates/plugins/vsmtp-plugin-memcached/docker/: docker-compose.yml
crates/plugins/vsmtp-plugin-memcached/src/: api.rs  lib.rs  tests.rs
crates/plugins/vsmtp-plugin-mongodb/: Cargo.toml  build.rs
crates/plugins/vsmtp-plugin-mongodb/docker/: docker-compose.yml
crates/plugins/vsmtp-plugin-mongodb/src/: api.rs  lib.rs
crates/plugins/vsmtp-plugin-mysql/: Cargo.toml  build.rs
crates/plugins/vsmtp-plugin-mysql/docker/: docker-compose.yml
crates/plugins/vsmtp-plugin-mysql/src/: api.rs  lib.rs
crates/plugins/vsmtp-plugin-redis/: Cargo.toml  build.rs
crates/plugins/vsmtp-plugin-redis/docker/: docker-compose.yml
crates/plugins/vsmtp-plugin-redis/src/: api.rs  lib.rs  tests.rs
crates/plugins/vsmtp-plugin-sqlite/: .gitignore  Cargo.toml  README.md  build.rs
crates/plugins/vsmtp-plugin-sqlite/src/: api.rs  lib.rs  tests.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: command.rs  connection_kind.rs  error.rs  lib.rs  reader.rs  receiver.rs  receiver_handler.rs  smtp_sasl.rs  stage.rs  writer.rs
crates/protocol/src/auth/: credentials.rs  mechanism.rs
crates/protocol/src/tls/: protocol_version.rs
crates/protocol/src/types/: address.rs  client_name.rs  domain.rs  reply.rs  reply_code.rs
crates/receiver/: Cargo.toml
crates/receiver/src/: lib.rs  main.rs
crates/receiver/src/smtp/: config.rs  server.rs  session.rs
crates/receiver/src/smtp/config/: cli.rs  tls_cipher_suite.rs
crates/receiver/src/smtp/rules/: api.rs  mod.rs  stages.rs  status.rs
crates/rhai-utils/: Cargo.toml  README.md
crates/rhai-utils/src/: crypto.rs  env.rs  lib.rs  process.rs  time.rs
crates/rule-engine/: Cargo.toml  README.md
crates/rule-engine/src/: lib.rs  module_resolver.rs  stage.rs  status.rs
crates/rule-engine/src/api/: auth.rs  crypto.rs  dkim.rs  dmarc.rs  dns.rs  envelop.rs  fs.rs  iprev.rs  logging.rs  mail_context.rs  mailbox.rs  message.rs  mod.rs  net.rs  process.rs  sasl.rs  spf.rs  time.rs  utils.rs
crates/rule-engine/src/config/: builder.rs  mod.rs
crates/rule-engine/src/dsl/directives/: action.rs  error.rs  mod.rs  rule.rs
crates/rule-engine/tests/: config.rs  global_state.rs  module_resolver.rs
crates/rule-engine/tests/common/: mod.rs
crates/rule-engine/tests/scripts/: config.rhai  global_state.rhai  simple.rhai
crates/rule-engine/tests/scripts/module-resolver/: prelude.rhai  script.rhai
crates/tracing-amqp/: Cargo.toml
crates/tracing-amqp/src/: dispatcher.rs  layer.rs  lib.rs
crates/working/: Cargo.toml
crates/working/src/: config.rs  lib.rs  main.rs
crates/working/src/config/: cli.rs
crates/working/src/rules/: api.rs  mod.rs  stage.rs  status.rs
src/plugins/vsmtp-plugin-dnsxl/: Cargo.toml
src/plugins/vsmtp-plugin-dnsxl/src/: api.rs
src/vsmtp/vsmtp-common/: Cargo.toml
src/vsmtp/vsmtp-common/src/: lib.rs
src/vsmtp/vsmtp-protocol/: Cargo.toml
src/vsmtp/vsmtp-protocol/src/: error.rs  lib.rs
tests/fuzz/: Cargo.toml
tests/fuzz/fuzz_targets/receiver/: README.md  docker-compose.yaml  rebuild.sh  receiver.rs
(+132 files in other folders)
