[workspace]
members = [
    "crates/receiver",
    "crates/working",
    "crates/delivery",
    "crates/log-dispatcher",
    "crates/common",
    "crates/config",
    "crates/mail-parser",
    "crates/rule-engine",
    "crates/rhai-utils",
    "crates/tracing-amqp",
    "crates/auth",
    "crates/protocol",
    "crates/plugins/vsmtp-plugin-clamav",
    "crates/plugins/vsmtp-plugin-csv",
    "crates/plugins/vsmtp-plugin-dnsxl",
    "crates/plugins/vsmtp-plugin-ldap",
    "crates/plugins/vsmtp-plugin-memcached",
    "crates/plugins/vsmtp-plugin-mongodb",
    "crates/plugins/vsmtp-plugin-mysql",
    "crates/plugins/vsmtp-plugin-redis",
    "crates/plugins/vsmtp-plugin-sqlite",
    "crates/antivirus",
]
resolver = "2"

[workspace.dependencies]
vsmtp-receiver = { path = "./crates/receiver" }
vsmtp-working = { path = "./crates/working" }
vsmtp-delivery = { path = "./crates/delivery" }
vsmtp-log-dispatcher = { path = "./crates/log-dispatcher" }
vsmtp-common = { path = "./crates/common" }
vsmtp-config = { path = "./crates/config" }
vsmtp-mail-parser = { path = "./crates/mail-parser" }
vsmtp-rule-engine = { path = "./crates/rule-engine" }
vsmtp-auth = { path = "./crates/auth" }
vsmtp-protocol = { path = "./crates/protocol" }
vsmtp-antivirus = { path = "./crates/antivirus" }
vsmtp-rhai-utils = { path = "./crates/rhai-utils" }
addr = { version = "0.15.6", default-features = false, features = ["std"] }
async-stream = { version = "0.3.5", default-features = false }
async-trait = { version = "0.1.74", default-features = false }
base64 = { version = "0.21.5", default-features = false, features = ["std"] }
bitflags = { version = "2.4.1", default-features = false, features = ["std", "serde"] }
bytes = { version = "1.5.0", default-features = false, features = ["std"] }
chrono = { version = "0.4.31", default-features = false, features = ["std", "clock"] }
colored = { version = "2.0.4", default-features = false }
csv = { version = "1.3.0", default-features = false }
fake = { version = "2.9.1", default-features = false, features = ["derive", "uuid", "time"] }
flate2 = { version = "1.0.28", default-features = false, features = ["rust_backend"] }
futures-lite = { version = "1.13.0", default-features = false, features = ["std"] }
ipnet = { version = "2.9.0", default-features = false, features = ["std"] }
iprange = { version = "0.6.7", default-features = false }
hostname = { version = "0.3.1", default-features = false }
humantime = { version = "2.1.0", default-features = false }
humantime-serde = { version = "1.1.1", default-features = false }
ldap3 = { version = "0.11.3", default-features = false, features = ["sync", "tls-rustls"] }
memcache = { version = "0.17.0", default-features = false }
memchr = { version = "2.6.4", default-features = false, features = ["std"] }
mongodb = { version = "2.7.0", default-features = false, features = ["tokio-sync"] }
pem-rfc7468 = { version = "0.7.0", default-features = false, features = ["std"] }
pretty_assertions = { version = "1.4.0", default-features = false, features = ["std"] }
r2d2 = { version = "0.8.10", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
rhai-autodocs = { version = "0.4.1", default-features = false }
rhai-dylib = { version = "0.1.12", default-features = false, features = ["libloading", "sync"] }
rsa = { version = "0.9.3", default-features = false, features = ["std", "pem", "u64_digit"] }
rstest = { version = "0.18.2", default-features = false }
rusqlite = { version = "0.29.0", default-features = false, features = ["bundled"] }
rustls = { version = "0.21.8", default-features = false, features = ["tls12", "logging"] }
rustls-pemfile = { version = "1.0.3", default-features = false }
semver = { version = "1.0.20", default-features = false, features = ["std", "serde"] }
serde = { version = "1.0.190", default-features = false, features = ["std", "derive", "rc"] }
serde_json = { version = "1.0.108", default-features = false, features = ["std"] }
serde_path_to_error = { version = "0.1.14", default-features = false }
sha2 = { version = "0.10.8", default-features = false, features = ["std", "oid"] }
sha1 = { version = "0.10.6", default-features = false, features = ["std", "oid"] }
strum = { version = "0.25.0", default-features = false, features = ["std", "derive"] }
test-log = { version = "0.2.13", default-features = false, features = ["trace"] }
thiserror = { version = "1.0.50", default-features = false }
tracing = { version = "0.1.40", default-features = false, features = ["std", "attributes", "log"] }
tracing-amqp = { path = "./crates/tracing-amqp" }
tracing-appender = { version = "0.2.2", default-features = false }
tracing-serde = { version = "0.1.3", default-features = false }
tokio = { version = "1.33.0", default-features = false, features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14", default-features = false }
tokio-rustls = { version = "0.24.1", default-features = false, features = ["logging", "tls12"] }
tokio-executor-trait = { version = "2.1.1", default-features = false }
tokio-reactor-trait = { version = "1.1.0", default-features = false }
url = { version = "2.4.1", default-features = false, features = ["serde"] }
uzers = { version = "0.11.3", default-features = false }
uuid = { version = "1.5.0", default-features = false, features = ["std", "v4", "fast-rng"] }
viaspf = { version = "0.6.0", default-features = false, feature = ["tokio-timeout"] }
wait-timeout = { version = "0.2.0", default-features = false }
walkdir = { version = "2.4.0", default-features = false }
webpki-roots = { version = "0.25.2", default-features = false }

[workspace.dependencies.ahash]
version = "0.8.6"
default-features = false
features = ["std", "runtime-rng", "compile-time-rng"]

[workspace.dependencies.clap]
version = "4.4.7"
default-features = false
features = ["std", "color", "help", "usage", "error-context", "suggestions", "derive"]

[workspace.dependencies.env_logger]
version = "0.10.0"
default-features = false
features = ["auto-color", "humantime", "regex"]

[workspace.dependencies.futures-util]
version = "0.3.29"
default-features = false
features = ["std", "async-await", "async-await-macro"]

[workspace.dependencies.lapin]
version = "2.3.1"
default-features = false
features = ["rustls", "rustls-native-certs", "rustls-webpki-roots-certs"]

[workspace.dependencies.libc]
version = "0.2.149"
default-features = false
features = ["std", "const-extern-fn", "extra_traits"]

[workspace.dependencies.mysql]
version = "24.0.0"
default-features = false
features = ["rustls-tls", "buffer-pool", "webpki", "rustls-pemfile", "webpki-roots"]

[workspace.dependencies.mysql_common]
version = "0.30.6"
default-features = false
features = ["bigdecimal", "rust_decimal", "time", "frunk"]

[workspace.dependencies.redis]
version = "0.23.3"
default-features = false
features = ["acl", "streams", "geospatial", "script", "keep-alive"]

[workspace.dependencies.rhai]
version = "1.16.3"
default-features = false
features = ["std", "unchecked", "sync", "internals", "no_closure", "metadata"]

[workspace.dependencies.rhai-rand]
version = "0.1.6"
default-features = false
features = ["float", "array", "metadata"]

[workspace.dependencies.ring-compat]
version = "0.7.0"
default-features = false
features = ["std", "signature"]

[workspace.dependencies.rsasl]
version = "=2.0.0"
default-features = false
features = ["std", "provider", "config_builder", "anonymous", "plain", "login"]

# "std" features exists but will add "indexmap_1" too
[workspace.dependencies.serde_with]
version = "3.4.0"
default-features = false
features = ["macros", "base64", "indexmap_2"]

[workspace.dependencies.time]
version = "0.3.30"
default-features = false
features = ["std", "formatting", "macros", "serde-well-known"]

[workspace.dependencies.tracing-subscriber]
version = "0.3.17"
default-features = false
features = ["std", "smallvec", "fmt", "ansi", "env-filter"]

[workspace.dependencies.hickory-proto]
version = "0.24.0"
default-features = false
features = ["serde-config", "tokio-runtime", "serde-config", "dns-over-rustls", "dnssec-ring"]

[workspace.dependencies.hickory-resolver]
version = "0.24.0"
default-features = false
features = ["system-config", "tokio-runtime", "serde-config", "dns-over-rustls", "dnssec-ring"]

## Unstable feature, run with `cargo +nightly clippy -Z lints`
[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
# # restriction = "warn"
## Lints allowed with a reason
# Technically too restrictive, but we want to avoid multiple versions of the same crate if possible
multiple_crate_versions = "allow"
# Ignored for now, but we should fix them
module_name_repetitions = "allow"
# Too verbose for now, implementation is too subject to changes
missing_panics_doc = "allow"
missing_errors_doc = "allow"

## Unstable feature, run with `cargo +nightly clippy -Z lints`
[workspace.lints.rust]
# missing_docs = "warn"
unsafe_code = "warn"
rust_2018_idioms = "warn"

[workspace.package]
authors = ["Team viridIT <https://viridit.com/>"]
edition = "2021"
version = "3.0.0-rc.1"
publish = false
rust-version = "1.66.1"
license-file = "LICENSE"
license = "Elastic-2.0"
