[package]
name = "vsmtp-auth"
version.workspace = true
edition.workspace = true
license = "Elastic-2.0"
publish.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
addr = { workspace = true }
base64 = { workspace = true }
fake = { workspace = true }
pem-rfc7468 = { workspace = true }
rand = { workspace = true }
ring-compat = { workspace = true }
rsa = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
sha1 = { workspace = true, optional = true }
sha2 = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
viaspf = { workspace = true }
vsmtp-protocol = { workspace = true }
time = { workspace = true }

[features]
historic = ["dep:sha1"]

[dev-dependencies]
env_logger = { workspace = true }
pretty_assertions = { workspace = true }
rand = { workspace = true }
test-log = { workspace = true }
tracing-subscriber = { workspace = true }
hickory-resolver = { workspace = true }
vsmtp-mail-parser = { workspace = true }
