[package]
name = "vsmtp-common"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license = "Elastic-2.0"
license-file.workspace = true

[lints]
workspace = true

[dependencies]
fake = { workspace = true }
lapin = { workspace = true }
libc = { workspace = true }
rand = { workspace = true }
rhai = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
trust-dns-resolver = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
vsmtp-auth = { workspace = true }
vsmtp-mail-parser = { workspace = true }
vsmtp-protocol = { workspace = true }
