[package]
name = "vsmtp-config"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
rhai = { workspace = true, features = ["sync", "serde"] }
semver = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber = { workspace = true }
vsmtp-rhai-utils = { workspace = true }
