[package]
name = "vsmtp-config"
version.workspace = true
edition.workspace = true
license = "Elastic-2.0"
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
lapin = { workspace = true }
rhai = { workspace = true, features = ["sync", "serde"] }
rustls = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
vsmtp-auth = { workspace = true }
vsmtp-rhai-utils = { workspace = true }
tokio-executor-trait = { workspace = true }
tokio-reactor-trait = { workspace = true }
