[package]
name = "vsmtp-log-dispatcher"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license = "Elastic-2.0"
license-file.workspace = true

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
lapin = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-jaeger = { workspace = true }
rhai = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-amqp = { workspace = true }
tracing-appender = { workspace = true }
tracing-loki = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
url = { workspace = true }
vsmtp-config = { workspace = true }
