[package]
name = "vsmtp-mail-parser"
version.workspace = true
edition.workspace = true
publish.workspace = true
license = "Elastic-2.0"
license-file.workspace = true

[lints]
workspace = true

[dependencies]
# TODO: remove me
convert_case = "0.6.0"
serde = { workspace = true }
thiserror = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
