[package]
name = "vsmtp-protocol"
version.workspace = true
edition.workspace = true
license = "Elastic-2.0"
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
addr = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
fake = { workspace = true }
humantime = { workspace = true }
memchr = { workspace = true }
rand = { workspace = true }
rsasl = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio-rustls = { workspace = true }
tokio-stream = { workspace = true, features = ["time"] }
tracing = { workspace = true }
hickory-proto = { workspace = true }
uuid = { workspace = true }

[dependencies.tokio]
workspace = true
features = ["macros", "sync", "libc", "mio", "rt-multi-thread", "net", "io-util"]

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }
# NOTE: should use serde-test instead
serde_json = { workspace = true }
