[package]
name = "vsmtp-receiver"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-stream = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
futures-lite = { workspace = true }
futures-util = { workspace = true }
hostname = { workspace = true }
humantime-serde = { workspace = true }
lapin = { workspace = true }
rhai-rand = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tokio-stream = { workspace = true, features = ["time"] }
tracing = { workspace = true }
tracing-amqp = { workspace = true }
tracing-subscriber = { workspace = true }
vsmtp-common = { workspace = true }
vsmtp-config = { workspace = true }
vsmtp-mail-parser = { workspace = true }
vsmtp-protocol = { workspace = true }
vsmtp-rule-engine = { workspace = true }
