[package]
name = "vsmtp-rhai-utils"
authors.workspace = true
edition.workspace = true
version.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
humantime = { workspace = true }
humantime-serde = { workspace = true }
rhai = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
uzers = { workspace = true }
pem-rfc7468 = { workspace = true }
wait-timeout = { workspace = true }
ring-compat = { workspace = true }
vsmtp-auth = { workspace = true }
vsmtp-common = { workspace = true }
rustls = { workspace = true }
