[package]
name = "vsmtp-rhai-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "Elastic-2.0"
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
humantime = { workspace = true }
humantime-serde = { workspace = true }
pem-rfc7468 = { workspace = true }
rhai = { workspace = true }
ring-compat = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
uzers = { workspace = true }
vsmtp-auth = { workspace = true }
wait-timeout = { workspace = true }
