[package]
name = "tracing-amqp"
version.workspace = true
edition.workspace = true
license = "Elastic-2.0"
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
futures-util = { workspace = true }
hostname = { workspace = true }
humantime-serde = { workspace = true }
lapin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-serde = { workspace = true }
tracing-subscriber = { workspace = true }
