[package]
name = "vsmtp-working"
version.workspace = true
edition.workspace = true
license = "Elastic-2.0"
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
futures-lite = { workspace = true }
lapin = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
vsmtp-common = { workspace = true }
vsmtp-config = { workspace = true }
vsmtp-rhai-utils = { workspace = true }
vsmtp-rule-engine = { workspace = true }
