[package]
name = "vsmtp-plugin-clamav"
version.workspace = true
edition.workspace = true
publish.workspace = true
license = "Elastic-2.0"
license-file.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[build-dependencies]
r2d2 = { workspace = true }
rhai = { workspace = true }
rhai-autodocs = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
vsmtp-antivirus = { workspace = true }
vsmtp-common = { workspace = true }
vsmtp-rule-engine = { workspace = true }

[dependencies]
r2d2 = { workspace = true }
rhai = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
vsmtp-antivirus = { workspace = true }
vsmtp-common = { workspace = true }
# FIXME: Used for the `State` object.
#        Would be great not to import the whole crate.
vsmtp-rule-engine = { workspace = true }
