[package]
name = "vsmtp-plugin-csv"
version.workspace = true
authors.workspace = true
categories = ["email", "database", "plugin"]
documentation = "https://docs.rs/crate/vsmtp-plugin-csv/"
edition.workspace = true
homepage = "https://github.com/viridIT/vSMTP"
keywords = ["vsmtp", "csv"]
license = "Elastic-2.0"
publish.workspace = true
readme = "../../../README.md"
repository = "https://github.com/viridIT/vSMTP"
rust-version.workspace = true
description = "A plugin for vSMTP that supports CSV databases"

[package.metadata.release]
pre-release-commit-message = "chore: Release {{crate_name}} version {{version}}"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[build-dependencies]
csv = { workspace = true }
rhai = { workspace = true }
rhai-autodocs = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }

[dependencies]
csv = { workspace = true }
rhai = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
